--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 html {
   font-size: 100%;
   -webkit-box-sizing: border-box;
@@ -13,13 +12,13 @@ font-family: 'Courier New', Courier, monospace;
   background-color: #1b1b1b;
 }
 main {
-margin-top: 25px ;
+margin-top: 254px ;
 }
 /*Desktop View*/
 @media (min-width: 768px){
   main {
     margin-top: 0px ;
-    margin-left: 248px;
+    margin-left: 252px;
     padding: 10px;
   }
 }
@@ -36,6 +35,7 @@ header{
     font-size: 25px;
     text-transform: uppercase;
     text-decoration: underline;
+    padding-top: 20px;
 }
 a {
   position: relative;
@@ -66,7 +66,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  height: 250px;
+  height: 260px;
   width: 100%;
   background-color: #1b1b1b;
   border-style: solid;
@@ -87,22 +87,26 @@ nav {
   justify-content: space-evenly;
   }
 }
-
 nav ul {
     list-style-type: none;
     padding: 0px;
     margin: 0px;
- 
-   
   }
-
-
-
-
-
-
-code {
+  h2{
+    display: block;
     color: white;
+    text-align: center;
+    font-size: 20px;
+    text-decoration: underline;
+  }
+code {
+    display: block;
+    color: white;
+    text-align: center;
+    font-size: 18px;
+    background-color: #272727;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 code:hover {
     background-image: linear-gradient(to right, #d81dd8,#FFACFC);
@@ -113,16 +117,19 @@ li{
   color: #7122FA;
   margin-top: 5px;
   margin-bottom: 5px;
+  font-size: 15px;
 }
 @media (min-width: 768px){
   li{
-    font-size: 20px;
+    font-size: 18px;
     color: #7122FA;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
-.nav-link{
-
-
+.codeDescription{
+  padding-top: 0px;
+  margin-top: 0px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
 }
