--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ li{
     margin-bottom: 10px;
   }
 }
-.codeDescription{
+.code_description{
   padding-top: 0px;
   margin-top: 0px;
   padding-bottom: 0px;
