--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,8 @@ html {
   font-size: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font: monospace;
 }
 body {
-font-family: 'Courier New', Courier, monospace;
   margin: 0px;
   padding: 0px;
   min-height: 100vh;
@@ -31,16 +29,19 @@ margin-top: 254px ;
     text-decoration: underline;
 }
 header{
-    color: white;
+  color: #d81dd8;
     font-size: 25px;
     text-transform: uppercase;
     text-decoration: underline;
     padding-top: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 a {
   position: relative;
   text-decoration: underline;
   border-bottom: thick;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 20px;
   &::before {
     content: "";
     position: absolute;          
@@ -63,6 +64,7 @@ a:hover {
 }
 /*Mobile View*/
 nav {
+  writing-mode: sideways-lr;
   position: fixed;
   top: 0;
   left: 0;
@@ -71,11 +73,13 @@ nav {
   background-color: #1b1b1b;
   border-style: solid;
   color: #d81dd8;
-  text-align: center;
+  text-align: bottom;
+  z-index:99;
 }
 /*Desktop View*/
 @media (min-width: 768px){
   nav {
+  writing-mode: horizontal-tb;
   position: fixed;
   top: 0;
   left: 0;
@@ -93,43 +97,85 @@ nav ul {
     margin: 0px;
   }
   h2{
-    display: block;
+    display: flex;
+
     color: white;
     text-align: center;
     font-size: 20px;
     text-decoration: underline;
+    font-family: 'Courier New', Courier, monospace;
+    
   }
-code {
+  /*Mobile View*/
+  code{
     display: block;
     color: white;
-    text-align: center;
-    font-size: 18px;
+    text-align: left;
+    font-size: 15px;
     background-color: #272727;
     padding-bottom: 10px;
     padding-top: 10px;
+    padding-right: 200px;
+    border-style: solid;
+    border-width: 2px;
+  }
+  /*Desktop View*/
+  @media (min-width: 768px){
+  code {
+      display: block;
+      color: white;
+      text-align: left;
+      font-size: 15px;
+      background-color: #272727;
+      padding-bottom: 10px;
+      padding-top: 10px;
+      border-style: solid;
+      border-width: 2px;
+      white-space: pre;
+      word-break: normal;
+      word-wrap: normal;
+      line-height: 2;
+    }
 }
 code:hover {
-    background-image: linear-gradient(to right, #d81dd8,#FFACFC);
+    background-image: linear-gradient(to right,rgb(216, 29, 216),rgb(98, 16, 250));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 li{
-  color: #7122FA;
-  margin-top: 5px;
+  color: #d81dd8;
+  margin-top: px;
   margin-bottom: 5px;
   font-size: 15px;
 }
 @media (min-width: 768px){
   li{
     font-size: 18px;
-    color: #7122FA;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    color: #d81dd8;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 }
-.code_description{
-  padding-top: 0px;
-  margin-top: 0px;
-  padding-bottom: 0px;
-  margin-bottom: 0px;
+h2{
+  color: white;
+}
+p {
+  color:white;
+  text-align: left;
+  font-family: 'Courier New', Courier, monospace;
+}
+.termText{
+  color: #d81dd8;
+  font-weight: 700;
+}
+.nope{
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+.notes{
+  color: white;
+}
+.comment {
+  color:rgba(150, 147, 147, 0.918);
 }
