--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html {
   font-size: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace;
 }
 body {
   margin: 0px;
@@ -20,11 +21,17 @@ margin-top: 254px ;
     padding: 10px;
   }
 }
+/*Mobile View*/
+@media (max-height: 1024px){
+main{
+  margin-top: 254px ;
+  }
+}
 #navBarHeader{
     background-image: linear-gradient(to left,rgb(216, 29, 216),rgb(98, 16, 250));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 35px;
+    font-size: 32px;
     text-transform: uppercase;
     text-decoration: underline;
 }
@@ -34,13 +41,11 @@ header{
     text-transform: uppercase;
     text-decoration: underline;
     padding-top: 20px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 a {
   position: relative;
   text-decoration: underline;
   border-bottom: thick;
-  font-family: 'Courier New', Courier, monospace;
   font-size: 20px;
   &::before {
     content: "";
@@ -51,8 +56,16 @@ a {
     left: 0px;
   }
 }
+/*Mobile View*/
 a:link{
+  color:#FFACFC;
+  font-size: 15px;
+}
+/*Desktop View*/
+@media (min-width: 768px){
+  a:link{
     color:#FFACFC;
+  }
 }
 a:visited{
     color:white;
@@ -62,23 +75,74 @@ a:hover {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-/*Mobile View*/
-nav {
+/*Mobile View--GalaxyS9*/
+@media (min-width: 361px){
+  nav {
   writing-mode: sideways-lr;
   position: fixed;
   top: 0;
   left: 0;
   height: 260px;
-  width: 100%;
+  width: 10%;
   background-color: #1b1b1b;
   border-style: solid;
   color: #d81dd8;
   text-align: bottom;
   z-index:99;
+  }
+}
+/*Mobile View--Iphone*/
+@media (max-width: 375px){
+  nav {
+  writing-mode: sideways-lr;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 260px;
+  width: 25.5%;
+  background-color: #1b1b1b;
+  border-style: solid;
+  color: #d81dd8;
+  text-align: bottom;
+  z-index:99;
+  }
+}
+/*Mobile View--IphonePlus*/
+@media (max-width: 414px){
+  nav {
+  writing-mode: sideways-lr;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 260px;
+  width: 28.2%;
+  background-color: #1b1b1b;
+  border-style: solid;
+  color: #d81dd8;
+  text-align: bottom;
+  z-index:99;
+  }
+}
+/*Mobile View Ipad*/
+@media (min-width: 769px){
+  nav {
+  transform: none;
+  writing-mode: horizontal-tb;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 250px;
+  height: 100%;
+  background-color: #1b1b1b;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  }
 }
 /*Desktop View*/
-@media (min-width: 768px){
+@media (min-width: 769px){
   nav {
+  transform: none;
   writing-mode: horizontal-tb;
   position: fixed;
   top: 0;
@@ -98,12 +162,11 @@ nav ul {
   }
   h2{
     display: flex;
-
     color: white;
     text-align: center;
     font-size: 20px;
     text-decoration: underline;
-    font-family: 'Courier New', Courier, monospace;
+   
     
   }
   /*Mobile View*/
@@ -111,13 +174,18 @@ nav ul {
     display: block;
     color: white;
     text-align: left;
-    font-size: 15px;
+    font-size: 12px;
     background-color: #272727;
+    width: max-content;
     padding-bottom: 10px;
     padding-top: 10px;
     padding-right: 200px;
     border-style: solid;
     border-width: 2px;
+    white-space: pre;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 2;
   }
   /*Desktop View*/
   @media (min-width: 768px){
@@ -127,6 +195,7 @@ nav ul {
       text-align: left;
       font-size: 15px;
       background-color: #272727;
+      width: 86.7%;
       padding-bottom: 10px;
       padding-top: 10px;
       border-style: solid;
@@ -162,7 +231,6 @@ h2{
 p {
   color:white;
   text-align: left;
-  font-family: 'Courier New', Courier, monospace;
 }
 .termText{
   color: #d81dd8;
@@ -178,4 +246,8 @@ p {
 }
 .comment {
   color:rgba(150, 147, 147, 0.918);
+}
+.C{
+  font-weight: bold;
+  
 }
